--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 	<script src="fontfaceobserver-font-manager/fontfaceobserver.js" crossorigin="anonymous"></script>
 	<script src="fontfaceobserver-font-manager/fontfaceobserver-font-manager.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__linearmovement__linearmovement.js" crossorigin="anonymous"></script>
+	<script src="gdjs-evtsext__objectspawner__objectspawner.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__pixelperfectmovement__brakingdistance-func.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__pixelperfectmovement__definejavascriptfortopdown-func.js" crossorigin="anonymous"></script>
 	<script src="gdjs-evtsext__pixelperfectmovement__speedtoreach-func.js" crossorigin="anonymous"></script>
@@ -132,6 +133,8 @@
 	<script src="code0.js" crossorigin="anonymous"></script>
 	<script src="code1.js" crossorigin="anonymous"></script>
 	<script src="code2.js" crossorigin="anonymous"></script>
+	<script src="code3.js" crossorigin="anonymous"></script>
+	<script src="code4.js" crossorigin="anonymous"></script>
 	<script src="data.js" crossorigin="anonymous"></script>
 
 
